nohup.out
  File "client_repfibdigit.py", line 91
    print "connection failed.
                            ^
SyntaxError: EOL while scanning string literal
  File "client_repfibdigit.py", line 91
    print "connection failed.
                            ^
SyntaxError: EOL while scanning string literal
  File "client_repfibdigit.py", line 91
    print "connection failed.
                            ^
SyntaxError: EOL while scanning string literal
  File "client_repfibdigit.py", line 91
    print "connection failed.
                            ^
SyntaxError: EOL while scanning string literal
  File "client_repfibdigit.py", line 91
    print "connection failed.
                            ^
SyntaxError: EOL while scanning string literal
